<resources>
    <string name="app_name">Boardgame_App</string>
    <string name="btn_Spielevote">Spielevote</string>
    <string name="btn_Termine">Termine</string>
    <string name="btn_Spielevorschläge">Spielevorschläge</string>
    <string name="btn_Spielerliste">Spielerliste</string>
    <string name="btn_Chat">Chat</string>
    <string name="Textview_name">PlayersCup</string>
    <string name="speichern">Speichern</string>
    <string name="spielname_eingeben">Spielname eingeben</string>
    <string name="spielname">Spielname</string>
    <string name="speichern_addGame">Speichern</string>
    <string name="spiel_hinzufuegen">Spiel hinzufügen</string>
    <string name="SpielnameVoting">Spielname</string>
    <string name="Votes">0 Votes</string>
    <string name="Eins_Anzeige">#1</string>
    <string name="bewertung">Bewertung</string>
    <string name="spiel_erstellen">Spiel erstellen</string>

    ---Termin Activity---
    <string name="event_title">Termine</string>
    <string name="next_event_label">Nächster Termin</string>
    <string name="upcoming_events_label">Weitere Termine</string>
    <string name="host_label">Gastgeber: %1$s</string>
    <string name="location_label">Ort: %1$s</string>
    <string name="placeholder_text">Wird geladen</string>
    <string name="no_events_available">Keine Termine verfügbar</string>

    ---Bewertungs Activity---
    <string name="rating_title">Bewertungen</string>
    <string name="latest_event_label">Letzter Spielabend</string>
    <string name="last_four_events">Letzte 4 Spielabende</string>
    <string name="save_rating">Bewertung speichern</string>
    <string name="current_rating_zero">Aktuelle Bewertung: 0 / 5</string>
    <string name="current_rating_value">Aktuelle Bewertung: %1$.0f / 5</string>
    <string name="saved_rating_value">Gespeicherte Bewertung: %1$.0f / 5</string>

    ---Spielerliste Activity---
    <string name="player_list_title">Spielerliste</string>
    <string name="player_name_hint">Name eingeben</string>
    <string name="player_location_hint">Ort eingeben</string>
    <string name="add_player_button">Spieler hinzufügen</string>
    <string name="current_players_label">Aktuelle Spieler</string>
    <string name="delete_player_button">Spieler löschen</string>
    <string name="player_item_text">%1$s | Ort: %2$s</string>

</resources>